syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
//import "google/protobuf/timestamp.proto";
//import "validate/validate.proto"; use buf first
option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//邮件模版表
service MailTemplate {
  //邮件模版表-创建一条数据
  rpc CreateMailTemplate(CreateMailTemplateReq) returns (CreateMailTemplateReply) {
    option (google.api.http) = {
      post: "/admin/v1/mail_template/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //邮件模版表-更新一条数据
  rpc UpdateMailTemplate(UpdateMailTemplateReq) returns (UpdateMailTemplateReply) {
    option (google.api.http) = {
      post: "/admin/v1/mail_template/update"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //邮件模版表-更新状态
  rpc UpdateMailTemplateStatus(UpdateMailTemplateStatusReq) returns (UpdateMailTemplateStatusReply) {
    option (google.api.http) = {
      post: "/admin/v1/mail_template/update/status"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //邮件模版表-删除一条数据
  rpc DeleteMailTemplate(DeleteMailTemplateReq) returns (DeleteMailTemplateReply) {
    option (google.api.http) = {
      post: "/admin/v1/mail_template/delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //邮件模版表-单条数据查询
  rpc GetMailTemplateInfo(GetMailTemplateInfoReq) returns (GetMailTemplateInfoReply) {
    option (google.api.http) = {get: "/admin/v1/mail_template/info"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //邮件模版表-列表数据查询
  rpc GetMailTemplateList(GetMailTemplateListReq) returns (GetMailTemplateListReply) {
    option (google.api.http) = {get: "/admin/v1/mail_template/list"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
}
//邮件模版表信息
message MailTemplateInfo {
  string id = 1; // id
	string name = 2; // 模板名称
	string code = 3; // 模板编码
	string accountId = 4; // 发送的邮箱账号编号
	string nickname = 5; // 发送人名称
	string title = 6; // 模板标题
	string content = 7; // 模板内容
	string params = 8; // 参数数组
	string remark = 9; // 备注
	int32 status = 10; // 状态(-1禁用,1开启)
	string createdAt = 11; // 创建时间
	string updatedAt = 12; // 更新时间
}

//请求-邮件模版表-创建一条数据
message CreateMailTemplateReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["name","code","accountId","title","content","status"]
    }
  };
  string name = 1 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 模板名称
	string code = 2 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 模板编码
	string accountId = 3 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 发送的邮箱账号编号
	string nickname = 4 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 255}]; // 发送人名称
	string title = 5 [(buf.validate.field).string={min_len: 1, max_len: 255}]; // 模板标题
	string content = 6 [(buf.validate.field).string={min_len: 1, max_len: 9223372036854775807}]; // 模板内容
	string params = 7 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 参数数组
	string remark = 8 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 255}]; // 备注
	int32 status = 9 ; // 状态(-1禁用,1开启)
}

//响应-邮件模版表-创建一条数据
message CreateMailTemplateReply {
  	string id = 1; // id
}

//请求-邮件模版表-更新一条数据
message UpdateMailTemplateReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id","name","code","accountId","title","content","status"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
	string name = 2 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 模板名称
	string code = 3 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 模板编码
	string accountId = 4 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 发送的邮箱账号编号
	string nickname = 5 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 255}]; // 发送人名称
	string title = 6 [(buf.validate.field).string={min_len: 1, max_len: 255}]; // 模板标题
	string content = 7 [(buf.validate.field).string={min_len: 1, max_len: 9223372036854775807}]; // 模板内容
	string params = 8 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 参数数组
	string remark = 9 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 255}]; // 备注
	int32 status = 10 ; // 状态(-1禁用,1开启)
}

//响应-邮件模版表-更新一条数据
message UpdateMailTemplateReply {}

//请求-邮件模版表-更新状态
message UpdateMailTemplateStatusReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id","status"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
	int32 status = 2 ; // 状态(-1禁用,1开启)
}

//响应-邮件模版表-更新状态
message UpdateMailTemplateStatusReply {}

//请求-邮件模版表-删除一条数据
message DeleteMailTemplateReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
}

//响应-邮件模版表-删除一条数据
message DeleteMailTemplateReply {}

//请求-邮件模版表-单条数据查询
message GetMailTemplateInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
}

//响应-邮件模版表-单条数据查询
message GetMailTemplateInfoReply {
  MailTemplateInfo info = 1;
}

//请求-邮件模版表-列表数据查询
message GetMailTemplateListReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "page",
        "pageSize"
      ]
    }
  };
  int32 page = 1[(buf.validate.field).int32={gte: 1}]; //页码
  int32 pageSize = 2[(buf.validate.field).int32={gte: 1, lte: 1000}]; //页数
}

//响应-邮件模版表-列表数据查询
message GetMailTemplateListReply {
  int32 total = 1; //总数
  repeated MailTemplateInfo list = 2; // 列表数据
}

